src/glsl/opt_vectorize.cpp
@@ -86,6 +86,7 @@ public:
    virtual ir_visitor_status visit_enter(ir_expression *);
    virtual ir_visitor_status visit_enter(ir_if *);
    virtual ir_visitor_status visit_enter(ir_loop *);
+   virtual ir_visitor_status visit_enter(ir_texture *);
 
    virtual ir_visitor_status visit_leave(ir_assignment *);
 
@@ -348,6 +349,18 @@ ir_vectorize_visitor::visit_enter(ir_loop *ir)
    visit_list_elements(this, &ir->body_instructions);
    try_vectorize();
 
+   return visit_continue_with_parent;
+}
+
+/**
+ * Upon entering an ir_texture, remove the current assignment from
+ * further consideration. Vectorizing multiple texture lookups into one
+ * is wrong.
+ */
+ir_visitor_status
+ir_vectorize_visitor::visit_enter(ir_texture *)
+{
+   this->current_assignment = NULL;
    return visit_continue_with_parent;
 }
 
